--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,20 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
-    
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+		<dependency>  
+		    <groupId>org.ow2.asm</groupId>  
+		    <artifactId>asm-all</artifactId>  
+		    <version>5.1</version>  
+		</dependency> 
   </dependencies>
   <build>
     <finalName>hongbo</finalName>
