--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-hadoop</artifactId>
             <version>2.2.0.RELEASE</version>
+            <exclusions>
+            	<exclusion>
+		          <groupId>javax.servlet.jsp</groupId>
+		          <artifactId>jsp-api</artifactId>
+		        </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
@@ -82,6 +88,16 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-common</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
   </dependencies>
   <build>
